--- a/src/MaaWpfGui/Views/UI/AnnouncementView.xaml
+++ b/src/MaaWpfGui/Views/UI/AnnouncementView.xaml
@@ -102,19 +102,25 @@
                 Margin="30,10,20,10"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                IsEnabled="{c:Binding 'IsScrolledToBottom or DoNotRemindThisAnnouncementAgain'}"
-                Orientation="Horizontal">
+                IsEnabled="{c:Binding 'IsScrolledToBottom or DoNotRemindThisAnnouncementAgain'}">
                 <CheckBox
                     Height="30"
-                    Margin="10"
+                    Margin="10,5"
                     HorizontalAlignment="Center"
                     VerticalContentAlignment="Center"
                     Content="{DynamicResource DoNotRemindThisAnnouncementAgain}"
                     IsChecked="{Binding DoNotRemindThisAnnouncementAgain}" />
+                <CheckBox
+                    Height="30"
+                    Margin="10,5"
+                    HorizontalAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    Content="{DynamicResource DoNotShowAnnouncement}"
+                    IsChecked="{Binding DoNotShowAnnouncement}" />
                 <Button
                     Height="50"
-                    MinWidth="100"
-                    Margin="10"
+                    MinWidth="120"
+                    Margin="10,10,10,0"
                     Command="{s:Action Close}"
                     Content="{DynamicResource Confirm}" />
             </StackPanel>
