--- a/src/MaaWpfGui/Res/Localizations/ja-jp.xaml
+++ b/src/MaaWpfGui/Res/Localizations/ja-jp.xaml
@@ -1219,6 +1219,7 @@ C:\\leidian\\LDPlayer9
     <system:String x:Key="Announcement">アナウンス</system:String>
     <system:String x:Key="CheckAndDownloadAnnouncement">アナウンスを見ます</system:String>
     <system:String x:Key="DoNotRemindThisAnnouncementAgain">次回のお知らせ更新まで表示しない</system:String>
+    <system:String x:Key="DoNotShowAnnouncement">お知らせのポップアップを表示しない</system:String>
     <!--  !Announcement  -->
     <!--  Reclamation  -->
     <system:String x:Key="ReclamationEarlyTip" xml:space="preserve">
